<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">汉语大会</string>
    <string name="disconnect">断开连接</string>
    <string name="connect_friends">连朋友</string>
    <string name="search_ap_tips">在Wi-Fi热点创建的Wi-Fi局域网中与其他人互连。</string>
    <string name="search_wifi_tips">在当前Wi-Fi网络下与其他人互连。</string>
    <string name="connecting">正在连接</string>
    <string name="creating_server">正在创建连接...</string>
    <string name="create_server">创建连接</string>
    <string name="search_connect">搜索加入</string>
    <string name="search_result_none">未发现好友</string>
    <string name="searching">搜索中...</string>
    <string name="wifi_server_number_wifi_name_default">Wi-Fi连接</string>
    <string name="wifi_server_number">%1$s (%2$d)</string>
    <string name="ap_server_number">热点连接  (%d)</string>
    <string name="http_share_open_warning_dialog_title">零流量邀请</string>
    <string name="http_share_open_warning_dialog_message">使用WiFi邀请将断开当前局域网，是否继续？</string>
    <string name="http_share_title">零流量邀请</string>
    <string name="http_share_first_step">第一步:</string>
    <string name="http_share_second_step">第二步:</string>
    <string name="http_share_first_step_tip">请好友打开手机WiFi，连接无线网络到：\n%s</string>
    <string name="http_share_second_step_tip1">打开浏览器，输入网址：\n%s</string>
    <string name="http_share_second_step_tip2">或者扫描二维码直接下载</string>
    <string name="invite_http_opening">正在开启WiFi邀请。。。</string>
    <string name="invite_bluetooth">蓝牙邀请</string>
    <string name="invite_bluetooth_first_step">第一步:</string>
    <string name="invite_bluetooth_second_step">第二步:</string>
    <string name="invite_bluetooth_send">搜索-发送</string>
    <string name="invite_bluetooth_first_step_tip">请身边好友打开蓝牙,保持对附近的蓝牙设备可见（如图所示）</string>
    <string name="invite_bluetooth_second_step_tip">好友完成第一步后,请点击搜索-发送按钮，就可以搜索TA的手机并把聚游发送过去</string>
    <string name="study_every_day">天天学成语</string>
    <string name="game_by_speak">你说我来猜</string>
    <string name="game_by_paint">你画我来猜</string>
    <string name="get_score">轻松拿金币</string>
    <string name="local_mode">单机模式</string>
    <string name="internet_mode">聚会模式</string>
    <string name="count_down_sample">01:01</string>
    <string name="search_chengyu">输入搜索成语</string>
    <string name="start_game">开始游戏</string>
    <string name="game_right">正确</string>
    <string name="game_wrong">错误</string>
    <string name="game_confirm">确认</string>
    <string name="game_next">换词</string>
    <string name="paint_clean">清除</string>
    <string name="speak_time_setting">时间设定</string>
    <string name="setting_time">请输入时间</string>
    <string name="setting_time_unit">秒</string>
    <string name="game_loading">Loading....</string>
    <string name="referee">裁判员</string>
    <string name="actor">表演者</string>
    <string name="observer">观察者</string>
    <string name="app_version">版本：%1$s</string>
    <string name="app_size">大小：%1$s</string>
    <string name="app_author">%1$s出品</string>
    <string name="download">下载</string>
    <string name="install">安装</string>
    <string name="update">更新</string>
    <string name="open">打开</string>
    <string name="cancel">取消</string>
    <string name="show_result">显示结果</string>
    <string name="pre_download">准备下载</string>
    <string name="speak_game_time">游戏时间</string>
    <string name="speak_right_number">正确个数</string>
    <string name="speak_wrong_number">错误个数</string>
    <string name="speak_pass_number">略过个数</string>
    <string name="speak_game_rule_setting">游戏规则设定</string>
    <string name="speak_game_number_unit">个</string>
    
    <string name="main_tab_set_study">学习</string>
    <string name="main_tab_set_interaction">互动</string>
    <string name="main_tab_set_friend">交友</string>
    <string name="main_tab_set_me">我</string>
    
    <!-- study start-->
    <string-array name="study_items">
        <item>天天听故事</item>
        <item>天天写汉字</item>
        <item>天天练发音</item>
        <item>天天学成语</item>
    </string-array>
    
    <string-array name="study_items_hints">
        <item>XXXXXX</item>
        <item>XXXXXX</item>
        <item>XXXXXX</item>
        <item>XXXXXX</item>
    </string-array>
    <string-array name="write_items">
        <item>一年级</item>
        <item>二年级</item>
        <item>三年级</item>
        <item>四年级</item>
    </string-array>
    <!-- study end -->
    
     <!-- interaction start-->
    <string-array name="interaction_items">
        <item>成语闯关</item>
        <item>成语大会</item>
        <item>生活百科</item>
        <item>影视娱乐</item>
    </string-array>
    <!-- interaction end -->
    
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

</resources>