<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.zhaoyan.juyou.game.chengyudahui.MainActivity$PlaceholderFragment" >

    <Button
        android:id="@+id/study_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/study_every_day" />

    <Button
        android:id="@+id/speak_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/study_btn"
        android:layout_centerHorizontal="true"
        android:text="@string/game_by_speak" />

    <Button
        android:id="@+id/paint_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/speak_btn"
        android:layout_centerHorizontal="true"
        android:text="@string/game_by_paint" />

    <Button
        android:id="@+id/score_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/paint_btn"
        android:layout_centerHorizontal="true"
        android:text="@string/get_score" />

</RelativeLayout>