<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/activity_background"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:background="@drawable/invite_ways"
                android:padding="5dp"
                android:text="@string/invite_bluetooth_first_step"
                android:textColor="#ffffff"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="14dp"
                android:text="@string/invite_bluetooth_first_step_tip" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/bluetooth_invite_iv" />

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:background="@drawable/invite_ways"
                android:padding="5dp"
                android:text="@string/invite_bluetooth_second_step"
                android:textColor="#ffffff"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="14dp"
                android:text="@string/invite_bluetooth_second_step_tip" />

            <Button
                android:id="@+id/bluetooth_send_btn"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:background="@drawable/btn_selector"
                android:padding="10dp"
                android:text="@string/invite_bluetooth_send" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>