<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_background"
    android:orientation="vertical"
    tools:context="com.zhaoyan.juyou.game.chengyudahui.invite.InviteHttpActivity" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:background="@drawable/invite_ways"
                android:padding="5dp"
                android:text="@string/http_share_first_step"
                android:textColor="#ffffff"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_network_http_share_ap_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="14dp"
                android:text="@string/http_share_first_step_tip" />

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:background="@drawable/invite_ways"
                android:padding="5dp"
                android:text="@string/http_share_second_step"
                android:textColor="#ffffff"
                android:textSize="15sp" />

            <!-- Remove android:autoLink="all" to avoid memory leak. -->

            <TextView
                android:id="@+id/tv_network_http_share_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="14dp"
                android:text="@string/http_share_second_step_tip1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="14dp"
                android:text="@string/http_share_second_step_tip2" />

            <com.zhaoyan.juyou.game.chengyudahui.view.AspectRatioImageView
                android:id="@+id/iv_network_http_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:adjustViewBounds="true" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>