<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/paint_chengyu_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:clickable="false"
        android:gravity="center"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/paint_image_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/paint_result_layout"
        android:layout_below="@+id/paint_chengyu_name" />

    <LinearLayout
        android:id="@+id/paint_result_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/paint_clean_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/paint_clean" />

        <Button
            android:id="@+id/paint_chengyu_right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/game_right" />

        <Button
            android:id="@+id/paint_change_word_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/game_next" />
    </LinearLayout>

</RelativeLayout>